<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Say Time</string>
    <string name="set_preferences">Say Time Preferences</string>
	<string name="preference_category_triggers">Triggers</string>
	<string name="preference_category_behaviors">Behavior</string>
	<string name="isHeadSetButtonEnabled_Title">Enable Headset Button</string>
	<string name="isHeadSetButtonEnabled_SummaryOn">Headset button enabled.</string>
	<string name="isHeadSetButtonEnabled_SummaryOff">Headset button ignored.</string>
	<string name="isCameraButtonEnabled_Title">Enable Camera Button</string>
	<string name="isCameraButtonEnabled_SummaryOn">Camera button enabled.</string>
	<string name="isCameraButtonEnabled_SummaryOff">Camera button ignored.</string>
	<string name="sleepTime_Title">Sleep Time</string>
	<string name="sleepTime_Summary">Seconds to sleep between triggers.</string>
	<string name="isPassthroughEnabled_Title">Pass Trigger Through</string>
	<string name="isPassthroughEnabled_SummaryOn">Triggers will be passed through.</string>
	<string name="isPassthroughEnabled_SummaryOff">Trigger broadcasts will be cancelled.</string>
    <string name="calculateIntervals_Title">Calculate Intervals</string>
    <string name="calculateIntervals_SummaryOn">Interval calculation will be spoken.</string>
    <string name="calculateIntervals_SummaryOff">Interval calculation is off.</string>
    <string name="terse_Title">Terse</string>
    <string name="terse_SummaryOn">Fewer words will be spoken.</string>
    <string name="terse_SummaryOff">Time will be spoken with more words.</string>
    <string name="Verbose_Time">It\'s %2$s past %1$s %3$s.</string>
    <string name="Verbose_Time_Hour">It\'s %1$s o\'clock %3$s.</string>
    <string name="Terse_Time">%2$s past %1$s %4$s.</string>
    <string name="Terse_Time_Hour">%1$s o\'clock %4$s.</string>
    <string name="Time_AM">A.M.</string>
    <string name="Time_PM">P.M.</string>
    <string name="Time_InMorning">in the morning</string>
    <string name="Time_InAfternoon">in the afternoon</string>
    <string name="Time_InEvening">in the evening</string>
    <string name="SayingTime">Saying time...</string>
    <string name="Settings">Settings</string>
    <string name="it_has_been">It has been</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="and">and</string>
    <string name="since_you_last_asked">since you last asked.</string>
    <string name="trigger_hourly_summary_off">Time will not be spoken at the top of each hour.</string>
    <string name="trigger_hourly_summary_on">Time will be spoken at the top of each hour.</string>
    <string name="trigger_hourly_title">Trigger Hourly</string>
</resources>
