<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_triggers">

        <CheckBoxPreference android:key="isHeadsetButtonEnabled"
            android:defaultValue="true"
            android:summaryOn="@string/isHeadSetButtonEnabled_SummaryOn"
            android:summaryOff="@string/isHeadSetButtonEnabled_SummaryOff"
            android:title="@string/isHeadSetButtonEnabled_Title" />
        <CheckBoxPreference android:key="isCameraButtonEnabled"
            android:defaultValue="false"
            android:summaryOn="@string/isCameraButtonEnabled_SummaryOn"
            android:summaryOff="@string/isCameraButtonEnabled_SummaryOff"
            android:title="@string/isCameraButtonEnabled_Title" />

    <CheckBoxPreference android:key="trigger_hourly" android:summaryOn="@string/trigger_hourly_summary_on" android:title="@string/trigger_hourly_title" android:summaryOff="@string/trigger_hourly_summary_off"></CheckBoxPreference>
</PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_behaviors">
        <EditTextPreference android:key="sleepTime"
            android:defaultValue="30" android:title="@string/sleepTime_Title"
            android:summary="@string/sleepTime_Summary" />




        <CheckBoxPreference android:key="calculateIntervals"
            android:summaryOn="@string/calculateIntervals_SummaryOn"
            android:summaryOff="@string/calculateIntervals_SummaryOff"
            android:title="@string/calculateIntervals_Title"
            android:defaultValue="true"></CheckBoxPreference>
        <CheckBoxPreference android:key="terse"
            android:title="@string/terse_Title" android:summaryOn="@string/terse_SummaryOn"
            android:summaryOff="@string/terse_SummaryOff"
            android:defaultValue="false"></CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>